Memperbaiki Isi Text

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
             <!-- navbar-->
             <nav class="navbar">
-                <a href="index.html">home</a>
-                <a href="#destinasi">Destinasi Favorit</a>
+                <a href="index.html">Home</a>
+                <a href="#destinasi">Destinasi Favorite</a>
                 <a href="#gallery">Gallery</a>
             </nav>
         </header>
@@ -50,8 +50,7 @@
         <!-- home section -->
         <section class="home" id="home">
             <div class="content">
-                <h3>Selamat Datang di Indonesia</h3>
-                <p>Sugeng Rawuh :)</p>
+                <h3>Selamat Datang di Website Destinasi Indonesia</h3>
             </div>
 
             <div class="controls">
@@ -382,27 +381,7 @@
                         <a href="#destinasi">Destinasi Favorit</a>
                         <a href="#gallery">Gallery</a>
                     </div>
-
-                    <div class="title-box">
-                        <h3>Support</h3>
-                        <a>Legal</a>
-                        <a>Privacy Policy</a>
-                        <a>Safe</a>
-                        <a>Terms Of Use</a>
-                    </div>
-
-                    <div class="title-box">
-                        <h3>Kontak Saya</h3>
-                        <a
-                            href="https://www.facebook.com/tata.corp/">facebook</a>
-                        <a
-                            href="https://www.instagram.com/ahmaddyd/">instagram</a>
-                        <a
-                            href="https://www.linkedin.com/in/ahmaddyd/">linkedin</a>
-                    </div>
-                </div>
-
-                <h1 class="copyright"> Copyright ©2021 | Submission Dicoding
+                <h1 class="copyright"> Copyright ©2024 | Website Destinasi Indonesia
                 </h1>
 
             </section>
