--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div id="menu-bar" class="fas fa-bars"></div>
 
-            <a href="index.html" class="logo"><span>T</span>ravel</a>
+            <a href="index.html" class="logo"><span>D</span>estinasi Indonesia</a>
 
             <!-- navbar-->
             <nav class="navbar">
